# Minke

./: .gitignore  .readthedocs.yaml  README.md  config-example.json  curl_submit.sh  mkdocs.yml  pyproject.toml  requirements.txt  server.py  start_server.sh
.github/workflows/: run_tests.yml
dockerfiles/detect/: Dockerfile  run.sh
dockerfiles/extract/: Dockerfile  run.sh
dockerfiles/qemu-docker/: Dockerfile  ptrace.patch  run.py  start.sh
dockerfiles/qemu-mipsel/: build.sh  start.sh
dockerfiles/winelyze/: Dockerfile  quiet.reg  start.sh
docs/: configuration.md  index.md  installation.md  limitations.md  requirements.txt  testing.md  usage.md
files/: minke-create-bridge  minke-remove-bridge  minke-sudoers
images/: base.py  config.py  detect.py  detectiteasy.py  extract.py  winelyze.py
minke/: build.py  server.py
minke/containers/: base.py  extract.py  qemu.py  winelyze.py
minke/data/: interesting_syscalls.txt
minke/lib/: helper.py  job.py  screenshots.py
minke/templates/: index.html  syscalls.html
scripts/: archive_test_files.sh  ci_tests.sh  clean_bridges.sh  count_syscalls_dump.sh  curl_submit.sh  docker_cleanup.sh  unarchive_test_files.sh
src/minke/: __main__.py  api.py  cli.py  helper.py  job.py  main.py  process.py  vars.py
test/: run_builder.sh  run_metasploit.sh
test/builder/: Dockerfile  Makefile  test-win.c
tests/: helpers.py  minke_test.py  process_test.py  screenshot_test.py
tests/builder/: Dockerfile  Makefile  test-win.c  win-shared.h
tests/files/: mipsel.strace  mipsel_segfault.strace
tests/metasploit/: Dockerfile
(+33 files in other folders)
